Fix delete button styling issue
Button was too close to date picker in Chrome
& Edge on smaller screens.
Fixed by adding margin-left.

--- a/client/src/css/DeleteTaskButton.css
+++ b/client/src/css/DeleteTaskButton.css
@@ -1,5 +1,6 @@
 .deleteTaskButton {
   position: absolute;
+  margin-left: 2rem;
   background-color: white;
   border: none;
   font-size: 1.5rem;
